--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "csv": "^0.3.7",
     "csv-parse": "^5.3.5",
     "csv-stringify": "^6.2.4",
