--- a/frontend/meal-pal/package.json
+++ b/frontend/meal-pal/package.json
@@ -2,7 +2,7 @@
   "name": "meal-pal",
   "version": "0.1.0",
   "private": true,
-  "homepage": https://thi-lehoangy.github.io/
+  "homepage": "https://thi-lehoangy.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
