--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -16,7 +16,13 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "logo2.jpg",
+      "type": "image/jpg",
+      "sizes": "512x512"
     }
+
   ],
   "start_url": ".",
   "display": "standalone",
