--- a/frontend/meal-pal/public/manifest.json
+++ b/frontend/meal-pal/public/manifest.json
@@ -8,13 +8,8 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "logo2.jpg",
+      "type": "image/jpg",
       "sizes": "512x512"
     }
   ],
