--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@typeform/embed-react": "^2.15.0"
+    "cors": "^2.8.5",
+    "csv": "^0.3.7",
+    "csv-parse": "^5.3.5",
+    "csv-stringify": "^6.2.4",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1"
   }
 }
