--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "csv-stringify": "^6.2.4",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20"
   }
 }
